s/dpfp s/dpfp-compact no-dpfp-lrsr for EM
11:23:09 **** Build of configuration Debug for project hiem ****
make all
Building file: ../src/crt0.S
Invoking: ARC ELF32 GCC Assembler
arc-elf32-gcc -x assembler-with-cpp -Wall -Wa,-adhlns="src/crt0.o.lst" -c -fmessage-length=0 -MMD -MP -MF"src/crt0.d" -MT"src/crt0.d" -mcpu=ARCv2EM -mlittle-endian -mmpy_option=2 -g3 -gdwarf-2 -mspfp -mspfp-compact -mdpfp -mdpfp-compact -mno-dpfp-lrsr -o "src/crt0.o" "../src/crt0.S"
Finished building: ../src/crt0.S

Building file: ../src/hiem.c
Invoking: ARC ELF32 GCC C Compiler
arc-elf32-gcc -O0 -Wall -Wa,-adhlns="src/hiem.o.lst" -c -fmessage-length=0 -MMD -MP -MF"src/hiem.d" -MT"src/hiem.d" -mcpu=ARCv2EM -mlittle-endian -mmpy_option=2 -g3 -gdwarf-2 -mspfp -mspfp-compact -mdpfp -mdpfp-compact -mno-dpfp-lrsr -o "src/hiem.o" "../src/hiem.c"
Finished building: ../src/hiem.c

Building target: hiem.elf
Invoking: ARC ELF32 GCC C Linker
arc-elf32-gcc -T"C:\Users\yunluz\runtime-EclipseApplication\hiem/lds/arcelf.lds" -nostartfiles -Wl,-Map,hiem.map -mcpu=ARCv2EM -mlittle-endian -mmpy_option=2 -g3 -gdwarf-2 -mspfp -mspfp-compact -mdpfp -mdpfp-compact -mno-dpfp-lrsr -o "hiem.elf"  ./src/crt0.o ./src/hiem.o
Finished building target: hiem.elf
--------------------------------------------------------------------------
11:24:12 **** Build of configuration Debug for project hiem ****
make all
Building file: ../src/crt0.S
Invoking: ARC ELF32 GCC Assembler
arc-elf32-gcc -x assembler-with-cpp -Wall -Wa,-adhlns="src/crt0.o.lst" -c -fmessage-length=0 -MMD -MP -MF"src/crt0.d" -MT"src/crt0.d" -mcpu=ARCv2EM -mlittle-endian -mmpy_option=2 -g3 -gdwarf-2 -mno-dpfp-lrsr -o "src/crt0.o" "../src/crt0.S"
../src/crt0.S:1:0: error: -mno-dpfp-lrsr suppforted only with -mdpfp
 ;; *******************************************************************************************************************
 ^
C:\CYGWIN\HOME\MAIN\DEV\MYRELEASE\BIN\WIN32\make.exe: *** [src/crt0.o] Error 1

Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -802,6 +802,28 @@
                valueType="boolean">
          </option>
          <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            command="-mspfp-compact"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp_compact"
+            name="Generate Single Precision FPX instructions (-mspfp-compact)"
+            valueType="boolean">
+          </option>
+          <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            command="-mdpfp-compact"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp_compact"
+            name="Generate Double Precision FPX instructions (-mdpfp-compact)"
+            valueType="boolean">
+      </option>
+
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            command="-mno-dpfp-lrsr"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr"
+            name="Disable LR and SR instructions from using FPX extension aux registers (-mno-dpfp-lrsr)"
+            valueType="boolean">
+      </option>
+         <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                command="-mea"
                defaultValue="false"
@@ -1031,6 +1053,7 @@
                   name="Double precisions FPU with all instructions (-mfpu=fpus_all)">
             </enumeratedOptionValue>
          </option>
+
       </tool>
       <builder
             command="make"
@@ -2757,13 +2780,7 @@
                name="Swap instruction(-mswap)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.swap">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.spfp"
-               name="Compact Single-precision floating point libraries(-mspfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
-         </option>
+        
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
@@ -2807,13 +2824,7 @@
                name="Support atomic functions(-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.dpfp"
-               name="Double precisions FPX instructions(-mdpfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
-         </option>
+        
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
@@ -2844,6 +2855,40 @@
                isAbstract="false"
                name="FPU  HS Type"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuhs">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.spfp"
+               name="Compact Single-precision floating point libraries(-mspfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.spfp_compact"
+               name="Generate Single Precision FPX instructions (-mspfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp_compact">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.dpfp"
+               name="Double precisions FPX instructions(-mdpfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.dpfp_compact"
+               name="Generate Double Precision FPX instructions (-mdpfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp_compact">
+         </option>         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.windows.option.target.mno-dpfp-lrsr"
+               name="Disable LR and SR instructions from using FPX extension aux registers (-mno-dpfp-lrsr)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
          </option>
 
       </toolChain>
@@ -3314,13 +3359,7 @@
                name="Swap instruction(-mswap)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.swap">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.spfp"
-               name="Compact Single-precision floating point libraries(-mspfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
-         </option>
+        
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
@@ -3357,13 +3396,7 @@
                name="Support atomic functions(-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.dpfp"
-               name="Double precisions FPX instructions(-mdpfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
-         </option>
+        
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
@@ -3397,6 +3430,41 @@
                isAbstract="false"
                name="FPU  HS Type"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuhs">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.spfp"
+               name="Compact Single-precision floating point libraries(-mspfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.spfp_compact"
+               name="Generate Single Precision FPX instructions (-msdpfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp_compact">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.dpfp"
+               name="Double precisions FPX instructions(-mdpfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.dpfp_compact"
+               name="Generate Double Precision FPX instructions (-mdpfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp_compact">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mno-dpfp-lrsr"
+               name="Disable LR and SR instructions from using FPX extension aux registers (-mno-dpfp-lrsr)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
          </option>
 
 
@@ -4200,13 +4268,7 @@
                name="Swap instruction(-mswap)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.swap">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.spfp"
-               name="Compact Single-precision floating point libraries(-mspfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
-         </option>
+        
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
@@ -4250,13 +4312,6 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
          <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.dpfp"
-               name="Double precisions FPX instructions(-mdpfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
-         </option>
-         <option
                category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.mpyem"
                name="Multiply instructions (ARCv2EM)"
@@ -4282,6 +4337,41 @@
                isAbstract="false"
                name="FPU  HS Type"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuhs">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.spfp"
+               name="Compact Single-precision floating point libraries(-mspfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.spfp_compact"
+               name="Generate Single Precision FPX instructions (-mspfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp_compact">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.dpfp"
+               name="Double precisions FPX instructions(-mdpfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.dpfp_compact"
+               name="Generate Double Precision FPX instructions (-mdpfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp_compact">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.option.target.mno-dpfp-lrsr"
+               name="Disable LR and SR instructions from using FPX extension aux registers (-mno-dpfp-lrsr)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
          </option>
 
       </toolChain>
@@ -4566,13 +4656,6 @@
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.spfp"
-               name="Compact Single-precision floating point libraries(-mspfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
-         </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.ea"
                name="Extended arithmetic instruction(-mea)"
                superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.ea">
@@ -4612,13 +4695,7 @@
                name="Support atomic functions(-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.dpfp"
-               name="Double precisions FPX instructions(-mdpfp)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
-         </option>
+         
          <option
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.mpyem"
@@ -4644,6 +4721,42 @@
                isAbstract="false"
                name="FPU  HS Type"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuhs">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.spfp"
+               name="Compact Single-precision floating point libraries(-mspfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.spfp_compact"
+               name="Generate Single Precision FPX instructions (-mspfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.spfp_compact">
+         </option>
+          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.dpfp"
+               name="Double precisions FPX instructions(-mdpfp)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.dpfp_compact"
+               name="Generate Double Precision FPX instructions (-mdpfp-compact)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.dpfp_compact">
+         </option>
+         
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.mno-dpfp-lrsr"
+               name="Disable LR and SR instructions from using FPX extension aux registers (-mno-dpfp-lrsr)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
          </option>
 
       </toolChain>
